[tool.poetry]
name = "menhera-level"
version = "0.1.0"
description = ""
authors = ["andmohiko <andmohiko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
mecab = "^0.996.2"
lightgbm = "^3.0.0"
Flask = "^1.1.2"
gensim = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
